# information-retrieval-exercises

./: README.md  pyproject.toml  requirements.txt
exercises/lab01-intro-to-pandas/: Lab_01.ipynb  Lab_01_solutions.ipynb
exercises/lab01-intro-to-pandas/data/chipotle/: chipotle.csv
exercises/lab01-intro-to-pandas/data/titanic/: titanic.csv  titanic.json  titanic.parquet
